fix: adjust white for improved accessibility & contrast

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,7 +9,7 @@ $yellow: #f3b234;
 $green: #02c996;
 $teal: #20c997;
 $cyan: #5bc0de;
-$white: #f5f5f5;
+$white: #ffffff;
 $gray-100: #f9f9f9;
 $gray-200: #f5f5f5;
 $gray-300: #e9e9e9;
